[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["FuNn1esT <admin@n1x.cn>"]
edition = "2018"

[lib]
doctest = false
test = true

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "3.3.0"
thiserror = "1.0.20"
regex = "1.3.9"
clap = "2.33.3"
